# botanical-sentinel

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: firmware.yml  mqtt-bridge.yml  web.yml
docs/plans/: 2026-03-07-milestone-1-esp32-scanner.md  2026-03-07-system-design.md  2026-03-08-milestone-2-implementation.md  2026-03-08-milestone-2-mqtt-ingestion.md  2026-03-08-milestone-3-api-and-web.md  2026-03-08-mqtt-bridge-ci.md  2026-03-08-tft-optional-design.md  2026-03-08-tft-optional.md  2026-03-08-web-ci-design.md  2026-03-08-web-ci.md  2026-03-09-ttgo-lora32-node-design.md  2026-03-09-ttgo-lora32-node.md
nodes/esp32-scanner/: README.md  platformio.ini
nodes/esp32-scanner/src/: config.h.example  (+1 more)
nodes/ttgo-lora32/: platformio.ini
server/: .env.example  README.md  docker-compose.yml
server/api/: Dockerfile  pyproject.toml
server/api/src/api/: app.py  config.py  models.py
server/api/src/api/routers/: devices.py  live.py  nodes.py  positions.py  scan.py
server/api/tests/: conftest.py  test_devices.py  test_health.py  test_nodes.py  test_positions.py  test_scan.py
server/mqtt_bridge/: Dockerfile  pyproject.toml
server/mqtt_bridge/src/mqtt_bridge/: __main__.py  config.py  db.py  estimator.py  handler.py  main.py
server/mqtt_bridge/tests/: test_db.py  test_estimator.py  test_handler.py  test_main.py
server/sql/: init.sql
web/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: app.css
(+22 files in other folders)
