[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/mqtt_bridge"]

[project]
name = "mqtt-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt==2.5.1",
    "asyncpg==0.31.0",
    "mac-vendor-lookup==0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
